deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docs
  namespace: ${NAMESPACE}
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: ${DOCKER_REGISTRY}/${GCLOUD_PROJECT_ID}/docs:${VERSION}
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
