deploy/service-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs-stage
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: docs
