deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: docs
