deploy/ingress-production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: docs
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - docs.dotmesh.com
    secretName: docs-ingress
  rules:
  - host: docs.dotmesh.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docs
          servicePort: 80
