deploy/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: docs-stage
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: stage.docs.dotmesh.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docs
          servicePort: 80
